Layout issues fixed

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
     background-size: cover;
     height: 100vh;
     margin: 0;
+    gap: 20px;
   }
 
 body.darkmode {
@@ -20,6 +21,7 @@ body.darkmode {
     flex: 0.5;
     flex-direction: column;
     align-items: space-evenly;
+    align-content: center;
     background-image: url('../assets/sidebar.png');
     background-size: contain;
     font-family: "DotGothic16", sans-serif;
@@ -49,16 +51,20 @@ header {
 .status-wrap {
     display: flex;
     flex-direction: column;
-    justify-content: space-around
+    align-content: center;
     height: 300px;
     width: 200px;
 }
 
 .status-message {
+    display: flex;
+    justify-content: center;
     background-image: url('../assets/message.gif');
     background-size: contain; 
     background-repeat: no-repeat;
-    height: 200px;
+    font-size: 12px;
+    color: black;
+    height: 220px;
     width: 200px;
 }
 
